AWS(VPC).yml
AWSTemplateFormatVersion: '2010-09-09'
Description: CLoudFormationTemplate for VPC

# ------------------------------------------------------------#
#  VPC
# ------------------------------------------------------------#

Resources:
  VPC:
    Type: AWS::EC2::VPC 
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsHostnames: true
      EnableDnsSupport: true
      InstanceTenancy: default
      Tags:
        - Key: Name
          Value: project-vpc

# ------------------------------------------------------------#
#  Subnet
# ------------------------------------------------------------#

  PublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Sub "${AWS::Region}a"
      VpcId: !Ref VPC
      CidrBlock: 10.0.0.0/24
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: project-pub-1a

  PublicSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Sub "${AWS::Region}c"
      VpcId: !Ref VPC
      CidrBlock: 10.0.1.0/24
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: project-pub-1c

  PrivateSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Sub "${AWS::Region}a"
      VpcId: !Ref VPC
      CidrBlock: 10.0.2.0/24
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: project-pri-1a-01

  PrivateSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Sub "${AWS::Region}c"
      VpcId: !Ref VPC
      CidrBlock: 10.0.3.0/24
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: project-pri-1c-01

  PrivateSubnet3:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Sub "${AWS::Region}a"
      VpcId: !Ref VPC
      CidrBlock: 10.0.4.0/24
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: project-pri-1a-02

  PrivateSubnet4:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Sub "${AWS::Region}c"
      VpcId: !Ref VPC
      CidrBlock: 10.0.5.0/24
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: project-pri-1c-02

  PrivateSubnet5:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Sub "${AWS::Region}a"
      VpcId: !Ref VPC
      CidrBlock: 10.0.6.0/24
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: project-pri-1a-03

  PrivateSubnet6:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Sub "${AWS::Region}c"
      VpcId: !Ref VPC
      CidrBlock: 10.0.7.0/24
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: project-pri-1c-03

# ------------------------------------------------------------#
#  InternetGateway
# ------------------------------------------------------------#

  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: project-igw

  VPCGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref InternetGateway
      VpcId: !Ref VPC

# ------------------------------------------------------------#
#   NATGateway
# ------------------------------------------------------------#

  NATGateway:
   Type: AWS::EC2::NatGateway
   Properties:
      AllocationId: !GetAtt NATGatewayEIP.AllocationId
      SubnetId: !Ref PublicSubnet1
      Tags:
      - Key: stack
        Value: production
        
  NATGatewayEIP:
    Type: AWS::EC2::EIP
    Properties:
        Domain: vpc

# ------------------------------------------------------------#
#  RouteTable
# ------------------------------------------------------------#

  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: project-pub-rtb

  PublicRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  PublicSubnetRouteTableAssociation1:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet1
      RouteTableId: !Ref PublicRouteTable

  PublicSubnetRouteTableAssociation2:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet2
      RouteTableId: !Ref PublicRouteTable

  PrivateRouteTable1:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: project-pri-rtb-1

  PrivateRouteTable2:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: project-pri-rtb-2
  
  PrivateRouteTable3:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: project-pri-rtb-3

  PrivateSubnetRouteTableAssociation1:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnet1
      RouteTableId: !Ref PrivateRouteTable1
  
  PrivateSubnetRouteTableAssociation2:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnet2
      RouteTableId: !Ref PrivateRouteTable1

  PrivateSubnetRouteTableAssociation3:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnet3
      RouteTableId: !Ref PrivateRouteTable2

  PrivateSubnetRouteTableAssociation4:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnet4
      RouteTableId: !Ref PrivateRouteTable2
  
  PrivateSubnetRouteTableAssociation5:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnet5
      RouteTableId: !Ref PrivateRouteTable3

  PrivateSubnetRouteTableAssociation6:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnet6
      RouteTableId: !Ref PrivateRouteTable3
  
  OutbaundInternetRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRouteTable2
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NATGateway

Outputs:
  VPCId:
    Description: "The ID of the created VPC"
    Value: !Ref VPC
    Export:
      Name: "VPC-ID"
    
  SubnetId1:
    Description: "The ID of the created Subnet1"
    Value: !Ref PrivateSubnet1
    Export:
      Name: "PrivateSubnet1-ID"

  SubnetId2:
    Description: "The ID of the created Subnet2"
    Value: !Ref PrivateSubnet2
    Export:
      Name: "PrivateSubnet2-ID"

  SubnetId3:
    Description: "The ID of the created Subnet3"
    Value: !Ref PrivateSubnet3
    Export:
      Name: "PrivateSubnet3-ID"

  SubnetId4:
    Description: "The ID of the created Subnet4"
    Value: !Ref PrivateSubnet4
    Export:
      Name: "PrivateSubnet4-ID"
  
  SubnetId5:
    Description: "The ID of the created Subnet5"
    Value: !Ref PrivateSubnet5
    Export:
      Name: "PrivateSubnet5-ID"

  SubnetId6:
    Description: "The ID of the created Subnet6"
    Value: !Ref PrivateSubnet6
    Export:
      Name: "PrivateSubnet6-ID"
  
  PrivateRouteTableId1:
    Description: "The ID of the created PrivateRouteTable1"
    Value: !Ref PrivateRouteTable1
    Export:
      Name: "PrivateRouteTable1-ID"
  
  PrivateRouteTableId2:
    Description: "The ID of the created PrivateRouteTable1"
    Value: !Ref PrivateRouteTable2
    Export:
      Name: "PrivateRouteTable2-ID"
